--- a/blank.html
+++ b/blank.html
@@ -12,30 +12,33 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
-  <header class="main-header">
-  <nav class="main-navigation">
-    <a class="main-header-logo" href="index.html">
-      <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
-    </a>
-    <ul class="site-navigation">
-      <li><a href="blank.html">Студия</a></li>
-      <li><a href="blank.html">Клиенты</a></li>
-      <li><a href="catalog.html">Магазин</a></li>
-      <li><a href="blank.html">Контакты</a></li>
-    </ul>
-    <a class="cart-link" href="blank.html">
-      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
-        <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
-        <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
-      </svg>
-      <span>Корзина</span>
-    </a>
-  </nav>
-  </header>
-  <main>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <div class="main-navigation-wrapper container">
+          <a class="main-header-logo">
+            <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="blank.html">Студия</a></li>
+            <li><a href="blank.html">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="blank.html">Контакты</a></li>
+          </ul>
+          <div class="user-navigation">
+            <a class="cart-link" href="blank.html">
+              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
+                <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
+                <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
+              </svg>
+              <span>Корзина</span>
+            </a>
+          </div>
+        </div>
+      </nav>
+      </header>
+  <main class="main container">
     <h1>Дизайн-студия Нёрдс</h1>
-
   </main>
   <footer class="main-footer">
     <section class="footer-contacts">
@@ -58,13 +61,13 @@
       </div>
       <ul>
         <li>
-          <a class="social-button" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
         </li>
         <li>
-          <a class="social-button" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
+          <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
         </li>
         <li>
-          <a class="social-button" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
+          <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
         </li>
       </ul>
     </section>
