--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="page-body">
   <header class="main-header">
   <nav class="main-navigation">
-    <div class="main-navigation-wrapper">
+    <div class="main-navigation-wrapper container">
       <a class="main-header-logo">
         <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
       </a>
@@ -37,122 +37,129 @@
     </div>
   </nav>
   </header>
-  <main class="container">
+  <main class="main">
     <h1 class="index-header">Дизайн-студия Нёрдс</h1>
-    <div class="slider-wrapper">
       <section class="slider">
-        <h2>Карусель слайдов</h2>
-        <div class="slider-box">
-          <div class="slider-box-left">
-            <p class="slider-box-header">Долго, дорого, <br>скрупулезно.</p>
-            <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
-            <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+        <div class="container">
+          <h2>Карусель слайдов</h2>
+          <div class="slider-box">
+            <div class="slider-box-left">
+              <p class="slider-box-header">Долго, дорого, <br>скрупулезно.</p>
+              <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+              <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+            </div>
+            <div class="slider-box-right">
+              <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="Слайд 1">
+            </div>
           </div>
-          <div class="slider-box-right">
-            <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="Слайд 1">
+          <div class="slider-box">
+            <div class="slider-box-left">
+              <p class="slider-box-header">Любим математику <br>как никто другой</p>
+              <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций</p>
+              <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+            </div>
+            <div class="slider-box-right">
+              <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="Слайд 2">
+            </div>
           </div>
-        </div>
-        <div class="slider-box">
-          <div class="slider-box-left">
-            <p class="slider-box-header">Любим математику <br>как никто другой</p>
-            <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций</p>
-            <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
-          </div>
-          <div class="slider-box-right">
-            <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="Слайд 2">
-          </div>
-        </div>
-        <div class="slider-box">
-          <div class="slider-box-left">
-            <p class="slider-box-header">Только ночь, <br>только хардкор</p>
-            <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
-            <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
-          </div>
-          <div class="slider-box-right">
-            <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="Слайд 3">
+          <div class="slider-box">
+            <div class="slider-box-left">
+              <p class="slider-box-header">Только ночь, <br>только хардкор</p>
+              <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
+              <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+            </div>
+            <div class="slider-box-right">
+              <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="Слайд 3">
+            </div>
           </div>
         </div>
       </section>
-    </div>
-
     <section class="services">
-      <h2>Наши услуги</h2>
-      <ul class="services-list">
-        <li class="services-item">
-          <img src="img/services/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
-          <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт!</p>
-          <a class="button services-button-sites" href="blank.html"><span>Заказать</span></a>
-        </li>
-        <li class="services-item">
-          <img src="img/services/illustration-2.jpg" width="300" height="146" alt="Приложения">
-          <h3>Приложения</h3>
-          <p>Покорите топ-10 приложений <br>в AppStore и Google Play</p>
-          <a class="button services-button-apps" href="blank.html"><span>Заказать</span></a>
-        </li>
-        <li class="services-item">
-          <img src="img/services/illustration-3.jpg" width="300" height="146" alt="Презентации">
-          <h3>Презентации</h3>
-          <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
-          <a class="button services-button-presentations" href="blank.html"><span>Заказать</span></a>
-        </li>
-      </ul>
-    </section>
-    <section class="about">
-      <h2>О студии</h2>
-      <div class="about-box-left">
-        <p class="about-title">Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-          <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <p class="about-info">Выполняем заказы на разработку:</p>
-        <ul class="about-list">
-          <li class="about-item">Веб-сайтов любой сложности</li>
-          <li class="about-item">Мобильных приложений для iOS и Android</li>
-          <li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
+      <div class="container">
+        <h2>Наши услуги</h2>
+        <ul class="services-list">
+          <li class="services-item">
+            <img src="img/services/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
+            <h3>Веб-сайты</h3>
+            <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт!</p>
+            <a class="button services-button-sites" href="blank.html"><span>Заказать</span></a>
+          </li>
+          <li class="services-item">
+            <img src="img/services/illustration-2.jpg" width="300" height="146" alt="Приложения">
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений <br>в AppStore и Google Play</p>
+            <a class="button services-button-apps" href="blank.html"><span>Заказать</span></a>
+          </li>
+          <li class="services-item">
+            <img src="img/services/illustration-3.jpg" width="300" height="146" alt="Презентации">
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
+            <a class="button services-button-presentations" href="blank.html"><span>Заказать</span></a>
+          </li>
         </ul>
       </div>
-      <div class="about-box-right">
-        <img src="img/nerds-illustration.jpg" width="360" height="208"
-        alt="Логотип Нёрдс на фоне разноцветных кругов и линий разных размеров">
-        <p class="about-data">C 2004 года любим точность во всем:</p>
-        <table class="about-data-table">
-          <tr class="about-table-row-one">
-            <td>146<sup>%</sup></td>
-            <td>100<sup>%</sup></td>
-            <td>50<sup>%</sup></td>
-          </tr>
-          <tr>
-            <td>Уровень <br>самоотдачи</td>
-            <td>Соблюдение <br>сроков</td>
-            <td>Минимальная <br>предоплата</td>
-          </tr>
-        </table>
+    </section>
+    <section class="about">
+      <div class="container">
+        <div class="about-grid">
+          <h2>О студии</h2>
+          <div class="about-box-left">
+            <p class="about-title">Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+              <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <p class="about-info">Выполняем заказы на разработку:</p>
+            <ul class="about-list">
+              <li class="about-item">Веб-сайтов любой сложности</li>
+              <li class="about-item">Мобильных приложений для iOS и Android</li>
+              <li class="about-item">Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </div>
+          <div class="about-box-right">
+            <img src="img/nerds-illustration.jpg" width="360" height="208"
+            alt="Логотип Нёрдс на фоне разноцветных кругов и линий разных размеров">
+            <p class="about-data">C 2004 года любим точность во всем:</p>
+            <table class="about-data-table">
+              <tr class="about-table-row-one">
+                <td>146<sup>%</sup></td>
+                <td>100<sup>%</sup></td>
+                <td>50<sup>%</sup></td>
+              </tr>
+              <tr>
+                <td>Уровень <br>самоотдачи</td>
+                <td>Соблюдение <br>сроков</td>
+                <td>Минимальная <br>предоплата</td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
     </section>
     <section class="partners">
-      <h2>Наши партнёры</h2>
-      <ul class="partners-list">
-        <li class="partners-item">
-          <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/partners/html-academy-logo.svg" width="199" height="68" alt="Логотип HTML Academy">
-          </a>
-        </li>
-        <li class="partners-item">
-          <a href="blank.html">
-            <img src="img/partners/barbershop-logo.jpg" width="209" height="90" alt="Логотип Barbershop BORODINSKI">
-          </a>
-        </li>
-        <li class="partners-item">
-          <a href="blank.html">
-            <img src="img/partners/pink-logo.jpg" width="185" height="52" alt="Логотип PINK">
-          </a>
-        </li>
-        <li class="partners-item">
-          <a href="blank.html">
-            <img src="img/partners/mishka-logo.jpg" width="173" height="84" alt="Логотип MISHKA">
-          </a>
-        </li>
-      </ul>
+      <div class="container">
+        <h2>Наши партнёры</h2>
+        <ul class="partners-list">
+          <li class="partners-item">
+            <a class="partners-link" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/partners/html-academy-logo.svg" width="199" height="68" alt="Логотип HTML Academy">
+            </a>
+          </li>
+          <li class="partners-item">
+            <a class="partners-link" href="blank.html">
+              <img src="img/partners/barbershop-logo.png" width="209" height="90" alt="Логотип Barbershop BORODINSKI">
+            </a>
+          </li>
+          <li class="partners-item">
+            <a class="partners-link" href="blank.html">
+              <img src="img/partners/pink-logo.svg" width="185" height="52" alt="Логотип PINK">
+            </a>
+          </li>
+          <li class="partners-item">
+            <a class="partners-link" href="blank.html">
+              <img src="img/partners/mishka-logo.png" width="173" height="84" alt="Логотип MISHKA">
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="main-footer">
@@ -177,13 +184,13 @@
       <div class="footer-social-icons">
         <ul>
           <li>
-            <a class="social-button" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Логотип Вконтакте">Вконтакте</a>
+            <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
           </li>
           <li>
-            <a class="social-button" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Логотип Facebook">Фейсбук</a>
+            <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
           </li>
           <li>
-            <a class="social-button" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Логотип Instagram">Инстаграм</a>
+            <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
           </li>
         </ul>
       </div>
