Доработка - Сетка на гридах для главной страницы

--- a/index.html
+++ b/index.html
@@ -165,17 +165,15 @@
   <footer class="main-footer">
     <section class="footer-contacts">
       <h2>Как нас найти</h2>
-      <div>
-        <img class="footer-map" src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
-      </div>
-      <div class="footer-contacts-box">
+      <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
+      <div class="footer-contacts-box container">
         <h3>Nёrds design studio</h3>
         <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
         <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
         <button class="button footer-button" type="button">Напишите нам</button>
       </div>
     </section>
-    <section class="footer-social">
+    <section class="footer-social container">
       <h2>Мы в соцсетях</h2>
       <div class="footer-social-box">
         <strong>Давайте дружить, это выгодно!</strong>
