Сетка на гридах для внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -37,9 +37,12 @@
         </div>
       </nav>
       </header>
-  <main class="page-catalog container">
-    <h1 class="page-title">Магазин готовых шаблонов</h1>
-    <section class="filters">
+  <main class="main-catalog">
+    <div class="page-title-box">
+      <h1 class="page-title container">Магазин готовых шаблонов</h1>
+    </div>
+    <div class="page-catalog container">
+      <section class="filters">
         <h2>Фильтр товаров</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="filter-price">
@@ -98,96 +101,98 @@
           </fieldset>
           <button class="button filter-button" type="submit"><span>Показать</span></button>
         </form>
-    </section>
-    <section class="catalog">
-      <h2>Список готовых шаблонов</h2>
-      <p class="filter-type">Сортировать:</p>
-      <ul class="catalog-filter-one">
-        <li><a class="filter-one-current" href="">По цене</a></li>
-        <li><a href="">По типу</a></li>
-        <li><a href="">По названию</a></li>
-      </ul>
-      <ul class="catalog-filter-two">
-        <li><a class="filter-two-current" href="">По убыванию</a></li>
-        <li><a href="">По возрастанию</a></li>
-      </ul>
-      <ul class="catalog-list">
-      <li class="catalog-item">
-          <a href="blank.html">
-            <p class="catalog-item-image">
-              <img src="img/products/img-sedona.jpg" width="359" height="578" alt="Готовый шаблон «SEDONA»">
-            </p>
-            <h3 class="catalog-item-title">Sedona</h3>
-          </a>
-          <p class="catalog-description">Информационный сайт <br>для туристов</p>
-          <a class="button button-price" href="">9 900 &#8381;</a>
-        </li>
+      </section>
+      <section class="catalog">
+        <h2>Список готовых шаблонов</h2>
+        <p class="filter-type">Сортировать:</p>
+        <ul class="catalog-filter-one">
+          <li><a class="filter-one-current" href="">По цене</a></li>
+          <li><a href="">По типу</a></li>
+          <li><a href="">По названию</a></li>
+        </ul>
+        <ul class="catalog-filter-two">
+          <li><a class="filter-two-current" href="">По убыванию</a></li>
+          <li><a href="">По возрастанию</a></li>
+        </ul>
+        <ul class="catalog-list">
         <li class="catalog-item">
-          <a href="blank.html">
-            <p class="catalog-item-image">
-              <img src="img/products/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
-            </p>
-            <h3 class="catalog-item-title">Pink App</h3>
-          </a>
-          <p class="catalog-description">Продуктовый лендинг <br>приложения для iOS и Android</p>
-          <a class="button button-price" href="">9 900 &#8381;</a>
-        </li>
-        <li class="catalog-item">
-          <a href="blank.html">
-            <p class="catalog-item-image">
-              <img src="img/products/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
-            </p>
-            <h3 class="catalog-item-title">Barbershop</h3>
-          </a>
-          <p class="catalog-description">Сайт салона красоты. <br>Для мужчин, да.</p>
-          <a class="button button-price" href="">9 900 &#8381;</a>
-        </li>
-        <li class="catalog-item">
-          <a href="blank.html">
-            <p class="catalog-item-image">
-              <img src="img/products/img-mishka.jpg" width="359" height="578" alt="Готовый шаблон «MISHKA»">
-            </p>
-            <h3 class="catalog-item-title">Mishka</h3>
-          </a>
-          <p class="catalog-description">Интернет-магазин <br>вязаных игрушек</p>
-          <a class="button button-price" href="">9 900 &#8381;</a>
-        </li>
-        <li class="catalog-item">
-          <a href="blank.html">
-            <p class="catalog-item-image">
-              <img src="img/products/img-aplus.jpg" width="359" height="578" alt="Готовый шаблон «A PLUS»">
-            </p>
-            <h3 class="catalog-item-title">A plus</h3>
-          </a>
-          <p class="catalog-description">Лендинг курсов повышения <br>квалификации</p>
-          <a class="button button-price" href="">9 900 &#8381;</a>
-        </li>
-        <li class="catalog-item">
-          <a href="blank.html">
-            <p class="catalog-item-image">
-              <img src="img/products/img-kvast.jpg" width="359" height="578" alt="Готовый шаблон «КВАСТ»">
-            </p>
-            <h3 class="catalog-item-title">КВАСТ</h3>
-          </a>
-          <p class="catalog-description">Промо-сайт производителя <br>крафтового кваса</p>
-          <a class="button button-price" href="">9 900 &#8381;</a>
-        </li>
-      </ul>
-      <ol class="pagination-list">
-        <li class="pagination-item pagination-item-current">
-          <a><span>1</span></a>
-        </li>
-        <li class="pagination-item">
-          <a href="#"><span>2</span></a>
-        </li>
-        <li class="pagination-item">
-          <a href="#"><span>3</span></a>
-        </li>
-        <li class="pagination-item">
-          <a href="#"><span>Следующая</span></a>
-        </li>
-      </ol>
-    </section>
+            <a href="blank.html">
+              <p class="catalog-item-image">
+                <img src="img/products/img-sedona.jpg" width="359" height="578" alt="Готовый шаблон «SEDONA»">
+              </p>
+              <h3 class="catalog-item-title">Sedona</h3>
+            </a>
+            <p class="catalog-description">Информационный сайт <br>для туристов</p>
+            <a class="button button-price" href="">9 900 &#8381;</a>
+          </li>
+          <li class="catalog-item">
+            <a href="blank.html">
+              <p class="catalog-item-image">
+                <img src="img/products/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
+              </p>
+              <h3 class="catalog-item-title">Pink App</h3>
+            </a>
+            <p class="catalog-description">Продуктовый лендинг <br>приложения для iOS и Android</p>
+            <a class="button button-price" href="">9 900 &#8381;</a>
+          </li>
+          <li class="catalog-item">
+            <a href="blank.html">
+              <p class="catalog-item-image">
+                <img src="img/products/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
+              </p>
+              <h3 class="catalog-item-title">Barbershop</h3>
+            </a>
+            <p class="catalog-description">Сайт салона красоты. <br>Для мужчин, да.</p>
+            <a class="button button-price" href="">9 900 &#8381;</a>
+          </li>
+          <li class="catalog-item">
+            <a href="blank.html">
+              <p class="catalog-item-image">
+                <img src="img/products/img-mishka.jpg" width="359" height="578" alt="Готовый шаблон «MISHKA»">
+              </p>
+              <h3 class="catalog-item-title">Mishka</h3>
+            </a>
+            <p class="catalog-description">Интернет-магазин <br>вязаных игрушек</p>
+            <a class="button button-price" href="">9 900 &#8381;</a>
+          </li>
+          <li class="catalog-item">
+            <a href="blank.html">
+              <p class="catalog-item-image">
+                <img src="img/products/img-aplus.jpg" width="359" height="578" alt="Готовый шаблон «A PLUS»">
+              </p>
+              <h3 class="catalog-item-title">A plus</h3>
+            </a>
+            <p class="catalog-description">Лендинг курсов повышения <br>квалификации</p>
+            <a class="button button-price" href="">9 900 &#8381;</a>
+          </li>
+          <li class="catalog-item">
+            <a href="blank.html">
+              <p class="catalog-item-image">
+                <img src="img/products/img-kvast.jpg" width="359" height="578" alt="Готовый шаблон «КВАСТ»">
+              </p>
+              <h3 class="catalog-item-title">КВАСТ</h3>
+            </a>
+            <p class="catalog-description">Промо-сайт производителя <br>крафтового кваса</p>
+            <a class="button button-price" href="">9 900 &#8381;</a>
+          </li>
+        </ul>
+        <ol class="pagination-list">
+          <li class="pagination-item pagination-item-current">
+            <a><span>1</span></a>
+          </li>
+          <li class="pagination-item">
+            <a href="#"><span>2</span></a>
+          </li>
+          <li class="pagination-item">
+            <a href="#"><span>3</span></a>
+          </li>
+          <li class="pagination-item">
+            <a href="#"><span>Следующая</span></a>
+          </li>
+        </ol>
+      </section>
+    </div>
+
   </main>
   <footer class="main-footer">
     <section class="footer-contacts">
