--- a/catalog.html
+++ b/catalog.html
@@ -14,25 +14,27 @@
   <body class="page-body inner-page">
     <header class="main-header">
       <nav class="main-navigation">
-        <div class="main-navigation-wrapper container">
-          <a class="main-header-logo">
-            <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
-          </a>
-          <ul class="site-navigation">
-            <li><a href="blank.html">Студия</a></li>
-            <li><a href="blank.html">Клиенты</a></li>
-            <li><a href="">Магазин</a></li>
-            <li><a href="blank.html">Контакты</a></li>
-          </ul>
-          <div class="user-navigation">
-            <a class="cart-link" href="blank.html">
-              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
-                <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
-                <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
-              </svg>
-              <span>Корзина</span>
+        <div class="main-navigation-wrapper">
+          <div class="container">
+            <a class="main-header-logo">
+              <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
             </a>
+            <ul class="site-navigation">
+              <li><a href="blank.html">Студия</a></li>
+              <li><a href="blank.html">Клиенты</a></li>
+              <li><a href="">Магазин</a></li>
+              <li><a href="blank.html">Контакты</a></li>
+            </ul>
+            <div class="user-navigation">
+              <a class="cart-link" href="blank.html">
+                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
+                  <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
+                  <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
+                </svg>
+                <span>Корзина</span>
+              </a>
+            </div>
           </div>
         </div>
       </nav>
@@ -74,7 +76,7 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset>
+          <fieldset class="filter-options">
             <legend class="filter-type">Особенности:</legend>
             <ul>
               <li class="filter-option filter-checkbox">
@@ -104,7 +106,7 @@
       </section>
       <section class="catalog">
         <h2>Список готовых шаблонов</h2>
-        <p class="filter-type">Сортировать:</p>
+        <p class="catalog-filter">Сортировать:</p>
         <ul class="catalog-filter-one">
           <li><a class="filter-one-current" href="">По цене</a></li>
           <li><a href="">По типу</a></li>
