"Сетка на флексах для внутренней страницы"

--- a/catalog.html
+++ b/catalog.html
@@ -194,39 +194,38 @@
         </ol>
       </section>
     </div>
+
   </main>
   <footer class="main-footer">
     <section class="footer-contacts">
       <h2>Как нас найти</h2>
-      <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
-      <div class="container">
-        <div class="footer-contacts-box">
-          <h3>Nёrds design studio</h3>
-          <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
-          <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <button class="button footer-button" type="button">Напишите нам</button>
-        </div>
+      <div>
+        <img class="footer-map" src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
+      </div>
+      <div class="footer-contacts-box">
+        <h3>Nёrds design studio</h3>
+        <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
+        <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+        <button class="button footer-button" type="button">Напишите нам</button>
       </div>
     </section>
-    <section class="footer-social container">
+    <section class="footer-social">
       <h2>Мы в соцсетях</h2>
-        <div class="footer-social-box">
-          <strong>Давайте дружить, это выгодно!</strong>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
-        </div>
-        <div class="footer-social-icons">
-          <ul>
-            <li>
-              <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
-            </li>
-            <li>
-              <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
-            </li>
-            <li>
-              <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
-            </li>
-          </ul>
-        </div>
+      <div class="footer-social-box">
+        <strong>Давайте дружить, это выгодно!</strong>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </div>
+      <ul>
+        <li>
+          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
+        </li>
+        <li>
+          <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
+        </li>
+        <li>
+          <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
+        </li>
+      </ul>
     </section>
   </footer>
   <section class="modal-feedback">
