Декоративные элементы на главной странице

--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
     </div>
     <div class="page-catalog container">
       <section class="filters">
-        <h2>Фильтр товаров</h2>
+        <h2 class="visually-hidden">Фильтр товаров</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="filter-price">
             <legend class="filter-type">Стоимость:</legend>
@@ -105,7 +105,7 @@
         </form>
       </section>
       <section class="catalog">
-        <h2>Список готовых шаблонов</h2>
+        <h2 class="visually-hidden">Список готовых шаблонов</h2>
         <p class="catalog-filter">Сортировать:</p>
         <ul class="catalog-filter-one">
           <li><a class="filter-one-current" href="">По цене</a></li>
@@ -198,7 +198,7 @@
   </main>
   <footer class="main-footer">
     <section class="footer-contacts">
-      <h2>Как нас найти</h2>
+      <h2 class="visually-hidden">Как нас найти</h2>
       <div>
         <img class="footer-map" src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
       </div>
@@ -209,8 +209,8 @@
         <button class="button footer-button" type="button">Напишите нам</button>
       </div>
     </section>
-    <section class="footer-social">
-      <h2>Мы в соцсетях</h2>
+    <section class="footer-social container">
+      <h2 class="visually-hidden">Мы в соцсетях</h2>
       <div class="footer-social-box">
         <strong>Давайте дружить, это выгодно!</strong>
         <p>Скидка 10% для друзей из социальных сетей.</p>
