--- a/index.html
+++ b/index.html
@@ -26,77 +26,77 @@
               <li><a href="blank.html">Контакты</a></li>
             </ul>
             <div class="user-navigation">
-              <a class="cart-link" href="blank.html">
-                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
-                  <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
-                  <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
-                </svg>
-                <span>Корзина</span>
-              </a>
+              <a class="cart-link" href="blank.html">Корзина</a>
             </div>
           </div>
         </div>
       </nav>
     </header>
   <main class="main">
-    <h1 class="index-header">Дизайн-студия Нёрдс</h1>
+    <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
       <section class="slider">
         <div class="container">
-          <h2>Карусель слайдов</h2>
-          <div class="slider-box">
-            <div class="slider-box-left">
-              <p class="slider-box-header">Долго, дорого, <br>скрупулезно.</p>
-              <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
-              <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+          <div class="slider-wrapper">
+            <h2 class="visually-hidden">Карусель слайдов</h2>
+            <div class="slider-box slider-box-one slide slide-current">
+              <div class="slider-box-left">
+                <p class="slider-box-header">Долго, дорого, <br>скрупулезно.</p>
+                <p class="slide-description">Математически выверенный дизайн <br>для вашего сайта или мобильного приложения.</p>
+                <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+              </div>
+              <div class="slider-box-right">
+                <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="Слайд 1">
+              </div>
             </div>
-            <div class="slider-box-right">
-              <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="Слайд 1">
+            <div class="slider-box slider-box-two slide">
+              <div class="slider-box-left">
+                <p class="slider-box-header">Любим математику <br>как никто другой</p>
+                <p class="slide-description">Никакого креатива, только математические формулы <br>для расчета идеальных пропорций</p>
+                <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+              </div>
+              <div class="slider-box-right">
+                <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="Слайд 2">
+              </div>
             </div>
-          </div>
-          <div class="slider-box">
-            <div class="slider-box-left">
-              <p class="slider-box-header">Любим математику <br>как никто другой</p>
-              <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций</p>
-              <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+            <div class="slider-box slider-box-three slide">
+              <div class="slider-box-left">
+                <p class="slider-box-header">Только ночь, <br>только хардкор</p>
+                <p class="slide-description">Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
+                <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
+              </div>
+              <div class="slider-box-right">
+                <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="Слайд 3">
+              </div>
             </div>
-            <div class="slider-box-right">
-              <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="Слайд 2">
-            </div>
-          </div>
-          <div class="slider-box">
-            <div class="slider-box-left">
-              <p class="slider-box-header">Только ночь, <br>только хардкор</p>
-              <p>Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
-              <a class="button slider-button" href="blank.html"><span>Узнать больше</span></a>
-            </div>
-            <div class="slider-box-right">
-              <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="Слайд 3">
+            <div class="slider-controls">
+              <button class="current" type="button" aria-label="Первый слайд"></button>
+              <button type="button" aria-label="Второй слайд"></button>
+              <button type="button" aria-label="Третий слайд"></button>
             </div>
           </div>
         </div>
       </section>
     <section class="services">
       <div class="container">
-        <h2>Наши услуги</h2>
+        <h2 class="visually-hidden">Наши услуги</h2>
         <ul class="services-list">
           <li class="services-item">
             <img src="img/services/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт!</p>
-            <a class="button services-button-sites" href="blank.html"><span>Заказать</span></a>
+            <h3 class="services-item-heading">Веб-сайты</h3>
+            <p class="services-description">Мир никогда не будет прежним <br>после того как увидит ваш сайт!</p>
+            <a class="button services-button services-button-sites" href="blank.html"><span>Заказать</span></a>
           </li>
           <li class="services-item">
             <img src="img/services/illustration-2.jpg" width="300" height="146" alt="Приложения">
-            <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений <br>в AppStore и Google Play</p>
-            <a class="button services-button-apps" href="blank.html"><span>Заказать</span></a>
+            <h3 class="services-item-heading">Приложения</h3>
+            <p class="services-description">Покорите топ-10 приложений <br>в AppStore и Google Play</p>
+            <a class="button services-button services-button-apps" href="blank.html"><span>Заказать</span></a>
           </li>
           <li class="services-item">
             <img src="img/services/illustration-3.jpg" width="300" height="146" alt="Презентации">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
-            <a class="button services-button-presentations" href="blank.html"><span>Заказать</span></a>
+            <h3 class="services-item-heading">Презентации</h3>
+            <p class="services-description">Вы даже не подозреваете, <br>насколько вы изумительны!</p>
+            <a class="button services-button services-button-presentations" href="blank.html"><span>Заказать</span></a>
           </li>
         </ul>
       </div>
@@ -104,7 +104,7 @@
     <section class="about">
       <div class="container">
         <div class="about-box">
-          <h2>О студии</h2>
+          <h2 class="visually-hidden">О студии</h2>
           <div class="about-box-left">
             <p class="about-title">Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
             <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
@@ -138,7 +138,7 @@
     </section>
     <section class="partners">
       <div class="container">
-        <h2>Наши партнёры</h2>
+        <h2 class="visually-hidden">Наши партнёры</h2>
         <ul class="partners-list">
           <li class="partners-item">
             <a class="partners-link" href="https://htmlacademy.ru/intensive/htmlcss">
@@ -166,7 +166,7 @@
   </main>
   <footer class="main-footer">
     <section class="footer-contacts">
-      <h2>Как нас найти</h2>
+      <h2 class="visually-hidden">Как нас найти</h2>
       <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
       <div class="container">
         <div class="footer-contacts-box">
@@ -178,7 +178,7 @@
       </div>
     </section>
     <section class="footer-social container">
-      <h2>Мы в соцсетях</h2>
+      <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="footer-social-box">
           <strong>Давайте дружить, это выгодно!</strong>
           <p>Скидка 10% для друзей из социальных сетей.</p>
