--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <h2 class="visually-hidden">О студии</h2>
           <div class="about-box-left">
             <p class="about-title">Мы — маленькая, но гордая <br>дизайн-студия из Краснодара.</p>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+            <p class="about-description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
               <br>превыше креатива. Работаем не покладая рук, как роботы.</p>
             <p class="about-info">Выполняем заказы на разработку:</p>
             <ul class="about-list">
@@ -169,12 +169,14 @@
       <h2 class="visually-hidden">Как нас найти</h2>
       <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
       <div class="container">
+      <div class="footer-contacts-wrapper">
         <div class="footer-contacts-box">
-          <h3>Nёrds design studio</h3>
-          <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
-          <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+          <h3 class="footer-contacts-heading">Nёrds design studio</h3>
+          <p class="footer-contacts-address"><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
+          <p class="footer-contacts-phone"><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
           <button class="button footer-button" type="button">Напишите нам</button>
         </div>
+      </div>
       </div>
     </section>
     <section class="footer-social container">
@@ -184,7 +186,7 @@
           <p>Скидка 10% для друзей из социальных сетей.</p>
         </div>
         <div class="footer-social-icons">
-          <ul>
+          <ul class="footer-social-list">
             <li>
               <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
             </li>
@@ -203,9 +205,9 @@
     <form action="https://echo.htmlacademy.ru" method="post">
       <p class="modal-part-one">
         <label for="feedback-name">Ваше имя:</label>
-        <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
+        <input class="feedback-input" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
         <label for="feedback-email">Ваш email:</label>
-        <input id="feedback-email" type="email" name="email" placeholder="email@example.com">
+        <input class="feedback-input" id="feedback-email" type="email" name="email" placeholder="email@example.com">
       </p>
       <p class="modal-part-two">
         <label for="feedback-message">Текст письма:</label>
