Доработка Декоративные элементы на внутренней странице

--- a/catalog.html
+++ b/catalog.html
@@ -258,7 +258,7 @@
       </p>
       <button class="button button-feedback" type="submit">Отправить</button>
     </form>
-    <button class="button button-close" type="button">Закрыть</button>
+    <button class=" button-close" type="button" aria-label="Закрыть"></button>
   </section>
   </body>
 </html>
