--- a/index.html
+++ b/index.html
@@ -200,22 +200,24 @@
         </div>
     </section>
   </footer>
-  <section class="modal-feedback">
-    <h2>Напишите нам</h2>
-    <form action="https://echo.htmlacademy.ru" method="post">
-      <p class="modal-part-one">
+  <section class="modal-feedback container">
+    <h2 class="modal-feedback-title">Напишите нам</h2>
+    <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+      <p class="modal-item">
         <label for="feedback-name">Ваше имя:</label>
         <input class="feedback-input" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
+      </p>
+      <p class="modal-item">
         <label for="feedback-email">Ваш email:</label>
         <input class="feedback-input" id="feedback-email" type="email" name="email" placeholder="email@example.com">
       </p>
-      <p class="modal-part-two">
+      <p class="modal-item modal-message">
         <label for="feedback-message">Текст письма:</label>
         <textarea id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
       </p>
       <button class="button button-feedback" type="submit">Отправить</button>
     </form>
-    <button class="button button-close" type="button">Закрыть</button>
+    <button class=" button-close" type="button" aria-label="Закрыть"></button>
   </section>
   </body>
 </html>
