--- a/blank.html
+++ b/blank.html
@@ -19,10 +19,10 @@
             <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
           </a>
           <ul class="site-navigation">
-            <li><a href="blank.html">Студия</a></li>
-            <li><a href="blank.html">Клиенты</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
-            <li><a href="blank.html">Контакты</a></li>
+            <li class="site-navigation-item"><a href="blank.html">Студия</a></li>
+            <li class="site-navigation-item"><a href="blank.html">Клиенты</a></li>
+            <li class="site-navigation-item"><a href="catalog.html">Магазин</a></li>
+            <li class="site-navigation-item"><a href="blank.html">Контакты</a></li>
           </ul>
           <div class="user-navigation">
             <a class="cart-link" href="blank.html">Корзина</a>
