--- a/blank.html
+++ b/blank.html
@@ -14,18 +14,20 @@
   <body class="page-body">
     <header class="main-header">
       <nav class="main-navigation">
-        <div class="main-navigation-wrapper container">
-          <a class="main-header-logo">
-            <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
-          </a>
-          <ul class="site-navigation">
-            <li class="site-navigation-item"><a href="blank.html">Студия</a></li>
-            <li class="site-navigation-item"><a href="blank.html">Клиенты</a></li>
-            <li class="site-navigation-item"><a href="catalog.html">Магазин</a></li>
-            <li class="site-navigation-item"><a href="blank.html">Контакты</a></li>
-          </ul>
-          <div class="user-navigation">
-            <a class="cart-link" href="blank.html">Корзина</a>
+        <div class="main-navigation-wrapper">
+          <div class="container">
+            <a class="main-header-logo" href="index.html">
+              <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип Дизайн-студии Нёрдс">
+            </a>
+            <ul class="site-navigation">
+              <li class="site-navigation-item"><a href="index.html">Студия</a></li>
+              <li class="site-navigation-item"><a href="blank.html">Клиенты</a></li>
+              <li class="site-navigation-item"><a href="blank.html">Магазин</a></li>
+              <li class="site-navigation-item"><a href="blank.html">Контакты</a></li>
+            </ul>
+            <div class="user-navigation">
+              <a class="cart-link" href="blank.html">Корзина</a>
+            </div>
           </div>
         </div>
       </nav>
@@ -44,7 +46,7 @@
           <h3 class="footer-contacts-heading">Nёrds design studio</h3>
           <p class="footer-contacts-address"><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
           <p class="footer-contacts-phone"><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <button class="button footer-button" type="button">Напишите нам</button>
+          <a class="button footer-button" type="button">Напишите нам</a>
         </div>
       </div>
       </div>
@@ -52,8 +54,8 @@
     <section class="footer-social container">
       <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="footer-social-box">
-          <strong>Давайте дружить, это выгодно!</strong>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
+          <strong class="social-be-friends">Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!</strong>
+          <p class="sale-for-friends">Скидка 10% для друзей из социальных сетей.</p>
         </div>
         <div class="footer-social-icons">
           <ul class="footer-social-list">
@@ -89,5 +91,7 @@
     </form>
     <button class=" button-close" type="button" aria-label="Закрыть"></button>
   </section>
+  <script src="map.js"></script>
+  <script src="modal.js"></script>
   </body>
 </html>
