--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
             <ul class="site-navigation">
               <li class="site-navigation-item"><a href="blank.html">Студия</a></li>
               <li class="site-navigation-item"><a href="blank.html">Клиенты</a></li>
-              <li class="site-navigation-item"><a href="">Магазин</a></li>
+              <li class="site-navigation-item"><a class="active" href="">Магазин</a></li>
               <li class="site-navigation-item"><a href="blank.html">Контакты</a></li>
             </ul>
             <div class="user-navigation">
@@ -64,15 +64,15 @@
             <legend class="filter-type">Сетка:</legend>
             <ul class="filter-grids-list">
               <li class="filter-option filter-radio">
-                <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="filter-adaptive" checked>
+                <input class="visually-hidden filter-input-radio" type="radio" value="adaptive" name="grid" id="filter-adaptive" checked>
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
               <li class="filter-option filter-radio">
-                <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="filter-fixed">
+                <input class="visually-hidden filter-input-radio" type="radio" value="fixed" name="grid" id="filter-fixed">
                 <label for="filter-fixed">Фиксированная</label>
               </li>
               <li class="filter-option filter-radio">
-                <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="filter-rubber">
+                <input class="visually-hidden filter-input-radio" type="radio" value="rubber" name="grid" id="filter-rubber">
                 <label for="filter-rubber">Резиновая</label>
               </li>
             </ul>
@@ -209,14 +209,14 @@
     <section class="footer-contacts">
       <h2 class="visually-hidden">Как нас найти</h2>
       <iframe class="footer-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
-      width="1200" height="416" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
+       allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
       <div class="container">
       <div class="footer-contacts-wrapper">
         <div class="footer-contacts-box">
           <h3 class="footer-contacts-heading">Nёrds design studio</h3>
           <p class="footer-contacts-address"><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
           <p class="footer-contacts-phone"><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <button class="button footer-button" type="button">Напишите нам</button>
+          <a class="button footer-button" type="button">Напишите нам</a>
         </div>
       </div>
       </div>
@@ -224,8 +224,8 @@
     <section class="footer-social container">
       <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="footer-social-box">
-          <strong>Давайте дружить, это выгодно!</strong>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
+          <strong class="social-be-friends">Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!</strong>
+          <p class="sale-for-friends">Скидка 10% для друзей из социальных сетей.</p>
         </div>
         <div class="footer-social-icons">
           <ul class="footer-social-list">
@@ -261,5 +261,7 @@
     </form>
     <button class=" button-close" type="button" aria-label="Закрыть"></button>
   </section>
+  <script src="map.js"></script>
+  <script src="modal.js"></script>
   </body>
 </html>
