Доработка проекта по замечаниям-1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
     <header class="main-header">
@@ -175,7 +175,7 @@
           <h3 class="footer-contacts-heading">Nёrds design studio</h3>
           <p class="footer-contacts-address"><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
           <p class="footer-contacts-phone"><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <a class="button footer-button" type="button">Напишите нам</a>
+          <a class="button footer-button" href="">Напишите нам</a>
         </div>
       </div>
       </div>
