--- a/blank.html
+++ b/blank.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page-body">
     <header class="main-header">
@@ -46,7 +46,7 @@
           <h3 class="footer-contacts-heading">Nёrds design studio</h3>
           <p class="footer-contacts-address"><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
           <p class="footer-contacts-phone"><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <a class="button footer-button" type="button">Напишите нам</a>
+          <a class="button footer-button" href="">Напишите нам</a>
         </div>
       </div>
       </div>
@@ -54,7 +54,7 @@
     <section class="footer-social container">
       <h2 class="visually-hidden">Мы в соцсетях</h2>
         <div class="footer-social-box">
-          <strong class="social-be-friends">Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!Давайте дружить, это выгодно!</strong>
+          <strong class="social-be-friends">Давайте дружить, это выгодно!</strong>
           <p class="sale-for-friends">Скидка 10% для друзей из социальных сетей.</p>
         </div>
         <div class="footer-social-icons">
