--- a/catalog.html
+++ b/catalog.html
@@ -261,7 +261,7 @@
     </form>
     <button class=" button-close" type="button" aria-label="Закрыть"></button>
   </section>
-  <script src="map.js"></script>
-  <script src="modal.js"></script>
+  <!--<script src="js/map.js"></script> -->
+  <script src="js/modal.js"></script>
   </body>
 </html>
