--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
     <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="modal-item">
         <label for="feedback-name">Ваше имя:</label>
-        <input class="feedback-input" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
+        <input class="feedback-input feedback-input-name" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
       </p>
       <p class="modal-item">
         <label for="feedback-email">Ваш email:</label>
-        <input class="feedback-input" id="feedback-email" type="email" name="email" placeholder="email@example.com">
+        <input class="feedback-input feedback-input-email" id="feedback-email" type="email" name="email" placeholder="email@example.com">
       </p>
       <p class="modal-item modal-message">
         <label for="feedback-message">Текст письма:</label>
-        <textarea id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
+        <textarea class="feedback-input-message" id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
       </p>
       <button class="button button-feedback" type="submit">Отправить</button>
     </form>
     <button class=" button-close" type="button" aria-label="Закрыть"></button>
   </section>
-  <script src="map.js"></script>
-  <script src="modal.js"></script>
+  <!--<script src="js/map.js"></script> -->
+  <script src="js/modal.js"></script>
   </body>
 </html>
