--- a/blank.html
+++ b/blank.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
     <header class="main-header">
@@ -91,7 +91,6 @@
     </form>
     <button class=" button-close" type="button" aria-label="Закрыть"></button>
   </section>
-  <!--<script src="js/map.js"></script> -->
   <script src="js/modal.js"></script>
   </body>
 </html>
